WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256431
REGRESSION (
261186@main
): Linker warnings for WKPreferences.inactiveSchedulingPolicy property methods
https://bugs.webkit.org/show_bug.cgi?id=256431
Summary
REGRESSION (261186@main): Linker warnings for WKPreferences.inactiveSchedulin...
David Kilzer (:ddkilzer)
Reported
2023-05-07 11:46:21 PDT
Linker warnings for WKPreferences.inactiveSchedulingPolicy property methods. ld: warning: method '-setInactiveSchedulingPolicy:' in category from WebKit.build/Release/WebKit.build/Objects-normal/arm64e/UnifiedSource23-mm.o overrides method from class in WebKit.build/Release/WebKit.build/Objects-normal/arm64e/UnifiedSource23-mm.o ld: warning: method '-inactiveSchedulingPolicy' in category from WebKit.build/Release/WebKit.build/Objects-normal/arm64e/UnifiedSource23-mm.o overrides method from class in WebKit.build/Release/WebKit.build/Objects-normal/arm64e/UnifiedSource23-mm.o Regressed with: [Cocoa] API to set process throttling limits <
https://bugs.webkit.org/show_bug.cgi?id=253352
> <
rdar://103084383
> <
https://commits.webkit.org/261186@main
>
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-05-07 11:46:46 PDT
<
rdar://problem/109013429
>
David Kilzer (:ddkilzer)
Comment 2
2023-05-07 12:02:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13550
EWS
Comment 3
2023-05-08 09:29:00 PDT
Committed
263802@main
(7f5b080ae4a0): <
https://commits.webkit.org/263802@main
> Reviewed commits have been landed. Closing PR #13550 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug