REGRESSION (261186@main): Linker warnings for WKPreferences.inactiveSchedulingPolicy property methods https://bugs.webkit.org/show_bug.cgi?id=256431 <rdar://109013429>

Reviewed by Alex Christensen.

Move the methods to the correct Objective-C category to fix the
bug.

* Source/WebKit/UIProcess/API/Cocoa/WKPreferences.mm:
(-[WKPreferences setInactiveSchedulingPolicy:]):
(-[WKPreferences inactiveSchedulingPolicy]):

Canonical link: https://commits.webkit.org/263802@main